ARROW-17915: [C++] Error when using Substrait ProjectRel (#14295)

The existing test cases didn't cover multi-expressions and the faulty logic wasn't covered because of that. 

Lead-authored-by: Vibhatha Lakmal Abeykoon <vibhatha@gmail.com>
Co-authored-by: Vibhatha Abeykoon <vibhatha@gmail.com>
Signed-off-by: Benjamin Kietzman <bengilgit@gmail.com>